Grammar/PpParser.py
# Generated from Pp.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class PpParser ( Parser ):

    grammarFileName = "Pp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'func'", "'('", "')'", 
                     "','", "'let'", "';'", "'='", "'if'", "'elseif'", "'else'", 
                     "'while'", "'read'", "'write'", "'plot'", "'readcsv'", 
                     "'return'", "'not'", "'and'", "'or'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'^'", "'matrix'", "'['", "']'", "'dataset'", 
                     "'float'", "'int'", "'string'", "'bool'", "'mean'", 
                     "'median'", "'mode'", "'stdev'", "'variance'", "'dbeta'", 
                     "'cbeta'", "'rbeta'", "'dbinom'", "'cbinom'", "'rbinom'", 
                     "'dexp'", "'cexp'", "'rexp'", "'dgamma'", "'cgamma'", 
                     "'rgamma'", "'dgeom'", "'cgeom'", "'rgeom'", "'dnorm'", 
                     "'cnorm'", "'rnorm'", "'dpois'", "'cpois'", "'rpois'", 
                     "'dunif'", "'cunif'", "'runif'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT_NUMBER", 
                      "FLOAT_NUMBER", "STRING_LITERAL", "BOOL_LITERAL", 
                      "ID", "WS" ]

    RULE_r = 0
    RULE_program0 = 1
    RULE_program1 = 2
    RULE_statement0 = 3
    RULE_block0 = 4
    RULE_block1 = 5
    RULE_function_decl0 = 6
    RULE_decl_block0 = 7
    RULE_decl_block1 = 8
    RULE_parameters_or_empty0 = 9
    RULE_parameters0 = 10
    RULE_parameters1 = 11
    RULE_variable_decl0 = 12
    RULE_variables_decl1 = 13
    RULE_assignment0 = 14
    RULE_function_call0 = 15
    RULE_function_call_aux0 = 16
    RULE_function_call_aux1 = 17
    RULE_function_call_aux2 = 18
    RULE_if0 = 19
    RULE_else0 = 20
    RULE_while0 = 21
    RULE_io_statement0 = 22
    RULE_input0 = 23
    RULE_output0 = 24
    RULE_plot0 = 25
    RULE_readcsv0 = 26
    RULE_return0 = 27
    RULE_expression0 = 28
    RULE_bool_exp0 = 29
    RULE_bool_exp1 = 30
    RULE_bool_term0 = 31
    RULE_bool_term1 = 32
    RULE_bool_not0 = 33
    RULE_bool_op0 = 34
    RULE_rel_op0 = 35
    RULE_arithmetic_exp0 = 36
    RULE_arithmetic_exp1 = 37
    RULE_addition_subtraction0 = 38
    RULE_arithmetic_factor0 = 39
    RULE_arithmetic_factor1 = 40
    RULE_multiplication_division0 = 41
    RULE_arithmetic_term0 = 42
    RULE_arithmetic_term1 = 43
    RULE_exponent0 = 44
    RULE_numeric_term0 = 45
    RULE_numeric_term1 = 46
    RULE_sign0 = 47
    RULE_type0 = 48
    RULE_type1 = 49
    RULE_basic_type0 = 50
    RULE_value0 = 51
    RULE_value1 = 52
    RULE_matrix_literal0 = 53
    RULE_matrix_literal1 = 54
    RULE_matrix_literal2 = 55
    RULE_matrix_literal3 = 56
    RULE_matrix_literal4 = 57
    RULE_stat_functions0 = 58
    RULE_mean0 = 59
    RULE_median0 = 60
    RULE_mode0 = 61
    RULE_stdev0 = 62
    RULE_variance = 63
    RULE_beta0 = 64
    RULE_dbeta0 = 65
    RULE_cbeta0 = 66
    RULE_rbeta0 = 67
    RULE_binom0 = 68
    RULE_dbinom0 = 69
    RULE_cbinom0 = 70
    RULE_rbinom0 = 71
    RULE_exp0 = 72
    RULE_dexp0 = 73
    RULE_cexp0 = 74
    RULE_rexp0 = 75
    RULE_gamma0 = 76
    RULE_dgamma0 = 77
    RULE_cgamma0 = 78
    RULE_rgamma0 = 79
    RULE_geom0 = 80
    RULE_dgeom0 = 81
    RULE_cgeom0 = 82
    RULE_rgeom0 = 83
    RULE_norm0 = 84
    RULE_dnorm0 = 85
    RULE_cnorm0 = 86
    RULE_rnorm0 = 87
    RULE_pois0 = 88
    RULE_dpois0 = 89
    RULE_cpois0 = 90
    RULE_rpois0 = 91
    RULE_unif0 = 92
    RULE_dunif0 = 93
    RULE_cunif0 = 94
    RULE_runif0 = 95

    ruleNames =  [ "r", "program0", "program1", "statement0", "block0", 
                   "block1", "function_decl0", "decl_block0", "decl_block1", 
                   "parameters_or_empty0", "parameters0", "parameters1", 
                   "variable_decl0", "variables_decl1", "assignment0", "function_call0", 
                   "function_call_aux0", "function_call_aux1", "function_call_aux2", 
                   "if0", "else0", "while0", "io_statement0", "input0", 
                   "output0", "plot0", "readcsv0", "return0", "expression0", 
                   "bool_exp0", "bool_exp1", "bool_term0", "bool_term1", 
                   "bool_not0", "bool_op0", "rel_op0", "arithmetic_exp0", 
                   "arithmetic_exp1", "addition_subtraction0", "arithmetic_factor0", 
                   "arithmetic_factor1", "multiplication_division0", "arithmetic_term0", 
                   "arithmetic_term1", "exponent0", "numeric_term0", "numeric_term1", 
                   "sign0", "type0", "type1", "basic_type0", "value0", "value1", 
                   "matrix_literal0", "matrix_literal1", "matrix_literal2", 
                   "matrix_literal3", "matrix_literal4", "stat_functions0", 
                   "mean0", "median0", "mode0", "stdev0", "variance", "beta0", 
                   "dbeta0", "cbeta0", "rbeta0", "binom0", "dbinom0", "cbinom0", 
                   "rbinom0", "exp0", "dexp0", "cexp0", "rexp0", "gamma0", 
                   "dgamma0", "cgamma0", "rgamma0", "geom0", "dgeom0", "cgeom0", 
                   "rgeom0", "norm0", "dnorm0", "cnorm0", "rnorm0", "pois0", 
                   "dpois0", "cpois0", "rpois0", "unif0", "dunif0", "cunif0", 
                   "runif0" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    INT_NUMBER=71
    FLOAT_NUMBER=72
    STRING_LITERAL=73
    BOOL_LITERAL=74
    ID=75
    WS=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program0(self):
            return self.getTypedRuleContext(PpParser.Program0Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = PpParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.program0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl0(self):
            return self.getTypedRuleContext(PpParser.Variable_decl0Context,0)


        def program1(self):
            return self.getTypedRuleContext(PpParser.Program1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_program0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram0" ):
                listener.enterProgram0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram0" ):
                listener.exitProgram0(self)




    def program0(self):

        localctx = PpParser.Program0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program0)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.variable_decl0()
                self.state = 195
                self.program1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.program1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement0(self):
            return self.getTypedRuleContext(PpParser.Statement0Context,0)


        def program1(self):
            return self.getTypedRuleContext(PpParser.Program1Context,0)


        def function_decl0(self):
            return self.getTypedRuleContext(PpParser.Function_decl0Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_program1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram1" ):
                listener.enterProgram1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram1" ):
                listener.exitProgram1(self)




    def program1(self):

        localctx = PpParser.Program1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program1)
        try:
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PpParser.T__9, PpParser.T__12, PpParser.T__13, PpParser.T__14, PpParser.T__15, PpParser.T__16, PpParser.T__17, PpParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.statement0()
                self.state = 201
                self.program1()
                pass
            elif token in [PpParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.function_decl0()
                self.state = 204
                self.program1()
                pass
            elif token in [PpParser.EOF]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment0(self):
            return self.getTypedRuleContext(PpParser.Assignment0Context,0)


        def function_call0(self):
            return self.getTypedRuleContext(PpParser.Function_call0Context,0)


        def io_statement0(self):
            return self.getTypedRuleContext(PpParser.Io_statement0Context,0)


        def if0(self):
            return self.getTypedRuleContext(PpParser.If0Context,0)


        def while0(self):
            return self.getTypedRuleContext(PpParser.While0Context,0)


        def return0(self):
            return self.getTypedRuleContext(PpParser.Return0Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_statement0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement0" ):
                listener.enterStatement0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement0" ):
                listener.exitStatement0(self)




    def statement0(self):

        localctx = PpParser.Statement0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement0)
        try:
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 209
                self.assignment0()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 210
                self.function_call0()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 211
                self.io_statement0()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 212
                self.if0()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 213
                self.while0()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 214
                self.return0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block1(self):
            return self.getTypedRuleContext(PpParser.Block1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_block0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock0" ):
                listener.enterBlock0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock0" ):
                listener.exitBlock0(self)




    def block0(self):

        localctx = PpParser.Block0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.match(PpParser.T__0)
            self.state = 218
            self.block1()
            self.state = 219
            self.match(PpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement0(self):
            return self.getTypedRuleContext(PpParser.Statement0Context,0)


        def block1(self):
            return self.getTypedRuleContext(PpParser.Block1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_block1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock1" ):
                listener.enterBlock1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock1" ):
                listener.exitBlock1(self)




    def block1(self):

        localctx = PpParser.Block1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block1)
        try:
            self.state = 225
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PpParser.T__9, PpParser.T__12, PpParser.T__13, PpParser.T__14, PpParser.T__15, PpParser.T__16, PpParser.T__17, PpParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 221
                self.statement0()
                self.state = 222
                self.block1()
                pass
            elif token in [PpParser.T__1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_decl0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type0(self):
            return self.getTypedRuleContext(PpParser.Type0Context,0)


        def ID(self):
            return self.getToken(PpParser.ID, 0)

        def parameters_or_empty0(self):
            return self.getTypedRuleContext(PpParser.Parameters_or_empty0Context,0)


        def decl_block0(self):
            return self.getTypedRuleContext(PpParser.Decl_block0Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_function_decl0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_decl0" ):
                listener.enterFunction_decl0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_decl0" ):
                listener.exitFunction_decl0(self)




    def function_decl0(self):

        localctx = PpParser.Function_decl0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_decl0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 227
            self.match(PpParser.T__2)
            self.state = 228
            self.type0()
            self.state = 229
            self.match(PpParser.ID)
            self.state = 230
            self.match(PpParser.T__3)
            self.state = 231
            self.parameters_or_empty0()
            self.state = 232
            self.match(PpParser.T__4)
            self.state = 233
            self.decl_block0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_block0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl0(self):
            return self.getTypedRuleContext(PpParser.Variable_decl0Context,0)


        def decl_block1(self):
            return self.getTypedRuleContext(PpParser.Decl_block1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_decl_block0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_block0" ):
                listener.enterDecl_block0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_block0" ):
                listener.exitDecl_block0(self)




    def decl_block0(self):

        localctx = PpParser.Decl_block0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl_block0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 235
            self.match(PpParser.T__0)
            self.state = 236
            self.variable_decl0()
            self.state = 237
            self.decl_block1()
            self.state = 238
            self.match(PpParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_block1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement0(self):
            return self.getTypedRuleContext(PpParser.Statement0Context,0)


        def decl_block1(self):
            return self.getTypedRuleContext(PpParser.Decl_block1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_decl_block1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_block1" ):
                listener.enterDecl_block1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_block1" ):
                listener.exitDecl_block1(self)




    def decl_block1(self):

        localctx = PpParser.Decl_block1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl_block1)
        try:
            self.state = 244
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PpParser.T__9, PpParser.T__12, PpParser.T__13, PpParser.T__14, PpParser.T__15, PpParser.T__16, PpParser.T__17, PpParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 240
                self.statement0()
                self.state = 241
                self.decl_block1()
                pass
            elif token in [PpParser.T__1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameters_or_empty0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters0(self):
            return self.getTypedRuleContext(PpParser.Parameters0Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_parameters_or_empty0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters_or_empty0" ):
                listener.enterParameters_or_empty0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters_or_empty0" ):
                listener.exitParameters_or_empty0(self)




    def parameters_or_empty0(self):

        localctx = PpParser.Parameters_or_empty0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameters_or_empty0)
        try:
            self.state = 248
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PpParser.T__33, PpParser.T__36, PpParser.T__37, PpParser.T__38, PpParser.T__39, PpParser.T__40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 246
                self.parameters0()
                pass
            elif token in [PpParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameters0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type0(self):
            return self.getTypedRuleContext(PpParser.Type0Context,0)


        def ID(self):
            return self.getToken(PpParser.ID, 0)

        def parameters1(self):
            return self.getTypedRuleContext(PpParser.Parameters1Context,0)


        def getRuleIndex(self):
            return PpParser.RULE_parameters0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters0" ):
                listener.enterParameters0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters0" ):
                listener.exitParameters0(self)




    def parameters0(self):
